--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,9 +46,11 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url('../img/portrait_small.jpg');
+      background-image: url('../img/portrait_small.jpg');
       width: 150px;
       height: 150px;
+      background-position: center;
+      background-size: contain;
     }
   }
 
