--- a/scss/main.scss
+++ b/scss/main.scss
@@ -105,6 +105,8 @@ main {
   grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
+  	height: 300px;
+  	width: 300px;
     grid-area: bioimage;
     margin: auto;
     border-radius: 50%;
